libs/tree-sitter-wing/test/corpus/statements/statements.txt
====================
For loop
====================

for fox in sox {
}

for fox in sox {
    break;
}

---

(source
    (for_in_loop
    iterator: (reference (identifier))
    iterable: (reference (identifier))
        block: (block)
    )
    (for_in_loop
    iterator: (reference (identifier))
    iterable: (reference (identifier))
        block: (block (break_statement))
    )
)

====================
Variable assignment
====================

let x: num = 1;
x = 2;

let var y = "hello";

---

(source
    (variable_definition_statement
        name: (identifier)
        type: (builtin_type)
        value: (number)
    )
    (variable_assignment_statement
        name: (reference (identifier))
        value: (number)
    )
    (variable_definition_statement
        reassignable: (reassignable)
        name: (identifier)
        value: (string)
    )
)

====================
If
====================

if false {}

---

(source
    (if_statement
        condition: (bool)
        block: (block)
    )
)


====================
If Else
====================

if false {} else {}

---

(source
    (if_statement
        condition: (bool)
        block: (block)
        else_block: (block)
    )
)

====================
If Elif Else
====================

if false {} elif false {} else {}

---

(source
    (if_statement
        condition: (bool)
        block: (block)
        elif_block: (elif_block
            condition: (bool)
            block: (block))
        else_block: (block)
    )
)

====================
If More Than One Elif Else
====================

if false {} elif false {} elif true {} else {}

---

(source
    (if_statement
        condition: (bool)
        block: (block)
        elif_block: (elif_block
            condition: (bool)
            block: (block))
        elif_block: (elif_block
            condition: (bool)
            block: (block))
        else_block: (block)
    )
)

====================
Return
====================

return 1;

---

(source
    (return_statement
        expression: (number)
    )
)

====================
Inflight closure
====================

inflight (a: num, b: str?, var c: bool) => {};

---

(source
    (expression_statement
        (inflight_closure
            parameter_list: (parameter_list
                (parameter_definition
                    name: (identifier)
                    type: (builtin_type)
                )
                (parameter_definition
                    name: (identifier)
                    type: (optional
                        (builtin_type)
                    )
                )
                (parameter_definition
                    reassignable: (reassignable)
                    name: (identifier)
                    type: (builtin_type)
                )
            )
            block: (block)
        )
    )
)

==================================
Inflight closure with function parameter
==================================

inflight (callback: (num,num):bool) => {};

---
(source
    (expression_statement
        (inflight_closure
            parameter_list: (parameter_list
                    (parameter_definition
                        name: (identifier)
                        type: (function_type
                            parameter_types: (parameter_type_list
                                (builtin_type)
                                (builtin_type)
                            )
                            return_type: (builtin_type)
                        )
                    )
                )
            block: (block)
        )
    )
)

==================================
Class definition
==================================

class A {
    init() {}
    inflight do_something() {}
    a_member: str;
    var b_member: num;
}

---
(source
    (class_definition
        name: (identifier)
        implementation: (class_implementation
            (constructor
                parameter_list: (parameter_list)
                block: (block))
            (inflight_function_definition
                name: (identifier)
                parameter_list: (parameter_list)
                block: (block)
            )
            (class_member
                name: (identifier)
                type: (builtin_type)
            )
            (class_member
                reassignable: (reassignable)
                name: (identifier)
                type: (builtin_type)
            )
        )
    )
)

==================================
Class inheritance
==================================

class A extends B {}

---
(source
    (class_definition
        name: (identifier)
        parent: (custom_type 
            object: (identifier)
        )
        implementation: (class_implementation)
    )
)

==================================
Resource definition
==================================

resource A {
    init() {}
    preflight_func() {}
    async preflight_func() {}
    public preflight_func2() {}
    inflight inflight_func() {}
    public inflight inflight_func2() {}
    pf_member: str;
    inflight if_member: str;
    public inflight var if_member2: str;
}

---
(source
    (resource_definition
        name: (identifier)
        implementation: (resource_implementation
            (constructor
                parameter_list: (parameter_list)
                block: (block))
            (function_definition
                name: (identifier)
                parameter_list: (parameter_list)
                block: (block)
            )
            (function_definition
                async: (async_modifier)
                name: (identifier)
                parameter_list: (parameter_list)
                block: (block)
            )
            (function_definition
                access_modifier: (access_modifier)
                name: (identifier)
                parameter_list: (parameter_list)
                block: (block)
            )
            (inflight_function_definition
                name: (identifier)
                parameter_list: (parameter_list)
                block: (block)
            )
            (inflight_function_definition
                access_modifier: (access_modifier)
                name: (identifier)
                parameter_list: (parameter_list)
                block: (block)
            )
            (class_member
                name: (identifier)
                type: (builtin_type)
            )
            (inflight_class_member
                name: (identifier)
                type: (builtin_type)
            )
            (inflight_class_member
                access_modifier: (access_modifier)
                reassignable: (reassignable)
                name: (identifier)
                type: (builtin_type)
            )
        )
    )
)

==================================
Resource inheritance
==================================

resource A extends B {}

---
(source
    (resource_definition
        name: (identifier)
        parent: (custom_type 
            object: (identifier)
        )
        implementation: (resource_implementation)
    )
)

==================================
Struct definition
==================================

struct Test {
    cool: num;
    hip: str?;
}

---
(source
    (struct_definition
        (identifier)
        (struct_field
            (identifier)
            (builtin_type)
        )
        (struct_field
            (identifier)
            (optional
                (builtin_type)
            )
        )
    )
)

==================================
While statement
==================================

while false {}

while true {
    break;
}

---
(source
    (while_statement
        condition: (bool)
        block: (block)
    )
    (while_statement
        condition: (bool)
        block: (block (break_statement))
    )
)

==================================
Enum definition
==================================

enum SomeEnum {
    ONE, TWO, THREE
}

---
(source
    (enum_definition
        enum_name: (identifier)
        (enum_field)
        (enum_field)
        (enum_field)
    )
)
